; ModuleID = '/home/carl/AnghaBench/openpilot/panda/board/extr_main.c_started_interrupt_handler.c'
source_filename = "/home/carl/AnghaBench/openpilot/panda/board/extr_main.c_started_interrupt_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 (i32)* }

@EXTI = common dso_local global %struct.TYPE_4__* null, align 8
@POWER_SAVE_STATUS_DISABLED = common dso_local global i32 0, align 4
@POWER_SAVE_STATUS_ENABLED = common dso_local global i32 0, align 4
@USB_POWER_CDP = common dso_local global i32 0, align 4
@current_board = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @started_interrupt_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @EXTI, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* %2, align 4
  %8 = shl i32 1, %7
  %9 = and i32 %6, %8
  store volatile i32 %9, i32* %3, align 4
  %10 = load volatile i32, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = shl i32 1, %11
  %13 = and i32 %10, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = call i32 @delay(i32 100000)
  br label %17

17:                                               ; preds = %15, %1
  %18 = load i32, i32* %2, align 4
  %19 = shl i32 1, %18
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** @EXTI, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  ret void
}

declare dso_local i32 @delay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
